# hydroforge

./: .gitignore  README.md  pyproject.toml
hydroforge/: __init__.py
hydroforge/aggregator/: aggregator.py  kernel_codegen.py  netcdf_io.py  scatter_expr.py  statistics.py  utils.py
hydroforge/compiler/: __init__.py  data.py  initialization.py  model.py  namespace.py  partition.py  plan.py  statistics_binding.py
hydroforge/compute/: backend.py
hydroforge/contracts/: __init__.py  errors.py  events.py  fields.py  kernel_field.py  kernels.py  naming.py  runtime.py  temporal.py
hydroforge/core/: distributed.py  input_proxy.py  model.py  model_utils.py  module.py  multirank_reader.py
hydroforge/data/: __init__.py  aggregation.py  distributed.py  forcing.py  input.py
hydroforge/datasets/: __init__.py  abstract_dataset.py  daily_bin_dataset.py  era5_land_dataset.py  exported_dataset.py  netcdf_dataset.py  utils.py
hydroforge/execution/: __init__.py  aten.py  boundaries.py  capture.py  collectives.py  cuda_graph.py  inputs.py  metal_aten.py  metal_control.py  operators.py  outer.py  parameters.py  program.py  progress.py  runtime.py  step.py  substeps.py  windows.py
hydroforge/io/: __init__.py  aggregate.py  multirank_reader.py
hydroforge/kernels/: __init__.py  binding.py  context.py  devices.py  dispatcher.py  mutation.py  registry.py
hydroforge/model/: __init__.py  model.py  module.py  tensors.py
hydroforge/modeling/: distributed.py  input_proxy.py  model.py  model_utils.py  module.py  schema.py
hydroforge/output/: __init__.py  checkpoint.py
hydroforge/runtime/: backend.py  (+5 more)
(+80 files in other folders)
