[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydroforge"
version = "0.1.0"
description = "Generic framework for GPU-accelerated hydrological modelling"
authors = [
    {name = "Shengyu Kang", email = "kshy0204@whu.edu.cn"}
]
dependencies = [
    "pydantic>=2",
    "netCDF4",
    "numpy",
    "numba",
    "tqdm",
    "cftime",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hydroforge*"]

[project.optional-dependencies]
dev = ["ipykernel", "matplotlib", "ipympl", "pandas"]
